# research_library

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
chain_runs/: lmc_metallicity_semantic_report.md  lmc_metallicity_semantic_report.stderr  lmc_sfh_semantic_report.md  ngc4147_2025MNRAS5402863W_chain.json  ngc4147_2025MNRAS5402863W_chain.md  ngc4147_2025MNRAS5402863W_chain.stderr  ngc6205_2025MNRAS5402863W_chain.json  ngc6205_2025MNRAS5402863W_chain.md  ngc6205_2025MNRAS5402863W_chain.stderr  semantic_index_missing_run.json  tex_migration.sh  tex_migration_finish.sh  tex_migration_retry.sh
mcp/: run.sh
scripts/: batch_ingest_pdfs.py  finish_tex_migration.py  retry_failures_from_bib.py
src/research_library/: __init__.py  ads_data_products.py  arxiv_keywords.py  cli.py  config.py  log.py  lookup.py  mcp_server.py  pdf_extract.py  ref_classifier.py  refs_classify.py  services.py  settings.py
src/research_library/analysis/: __init__.py  pdf.py  ref_method_hints.py
src/research_library/analysis/embeddings/: __init__.py  base.py  local_sentence_transformer.py  (+3 more)
tests/: conftest.py  test_chain_concurrent_acquire.py  test_db_connect_wal.py  test_http_retry.py  test_library_dedupe.py  test_library_report.py  test_lookup_reference_parse.py  test_minimax_reasoning_retry.py  test_pdf_chain_helpers.py  test_pdf_chain_library_refs.py  test_pdf_identifiers_masthead.py  test_pdf_ingest.py  test_pdf_ingest_ads_pick.py  test_pdf_ingest_manual.py  test_semantic_chunking_grounding.py  test_semantic_live.py  test_semantic_offline.py  test_settings_and_services.py
(+5 files in other folders)
