[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-library"
version = "0.1.0"
description = "ADS/arXiv paper search, PDF tools, and MCP server for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfminer.six>=20221105",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0"]
mcp = ["mcp>=1.0.0"]
semantic = ["chromadb>=0.5.0"]
semantic-local = ["sentence-transformers>=3.0.0"]
tex-source = ["beautifulsoup4>=4.12.0"]
tex-local = ["pylatexenc>=2.10"]
dev = ["research-library[pdf,mcp,semantic,tex-source,tex-local]", "pytest>=7.0"]

[project.scripts]
research-lib = "research_library.cli:main"
research-library-mcp = "research_library.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_library"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
